--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "foundations/tools/foundry/simple-storage-f23/lib/forge-std"]
 	path = foundations/tools/foundry/simple-storage-f23/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "foundations/tools/foundry/fund-me-cu/lib/forge-std"]
+	path = foundations/tools/foundry/fund-me-cu/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
