--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "foundations/tools/foundry/fund-me-cu/lib/forge-std"]
 	path = foundations/tools/foundry/fund-me-cu/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "foundations/tools/foundry/fund-me-cu/lib/chainlink-brownie-contracts"]
+	path = foundations/tools/foundry/fund-me-cu/lib/chainlink-brownie-contracts
+	url = https://github.com/smartcontractkit/chainlink-brownie-contracts
+[submodule "foundations/tools/foundry/fund-me-cu/lib/foundry-devops"]
+	path = foundations/tools/foundry/fund-me-cu/lib/foundry-devops
+	url = https://github.com/ChainAccelOrg/foundry-devops
