--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "foundations/tools/foundry/fund-me-cu/lib/foundry-devops"]
 	path = foundations/tools/foundry/fund-me-cu/lib/foundry-devops
 	url = https://github.com/ChainAccelOrg/foundry-devops
+[submodule "foundations/tools/foundry/smart-contract-lottery-cu/lib/forge-std"]
+	path = foundations/tools/foundry/smart-contract-lottery-cu/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
