--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "foundations/tools/foundry/smart-contract-lottery-cu/lib/foundry-devops"]
 	path = foundations/tools/foundry/smart-contract-lottery-cu/lib/foundry-devops
 	url = https://github.com/Cyfrin/foundry-devops
+[submodule "foundations/tools/foundry/ERC20-f23/lib/forge-std"]
+	path = foundations/tools/foundry/ERC20-f23/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
