--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "foundations/tools/foundry/ERC20-f23/lib/forge-std"]
 	path = foundations/tools/foundry/ERC20-f23/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "foundations/tools/foundry/ERC20-f23/lib/openzeppelin-contracts"]
+	path = foundations/tools/foundry/ERC20-f23/lib/openzeppelin-contracts
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts
