--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "foundations/tools/foundry/ERC20-f23/lib/openzeppelin-contracts"]
 	path = foundations/tools/foundry/ERC20-f23/lib/openzeppelin-contracts
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts
+[submodule "foundations/tools/foundry/NFT-f23/lib/forge-std"]
+	path = foundations/tools/foundry/NFT-f23/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
