--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,9 @@
 [submodule "foundations/tools/foundry/NFT-f23/lib/forge-std"]
 	path = foundations/tools/foundry/NFT-f23/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "foundations/tools/foundry/NFT-f23/lib/openzeppelin-contracts"]
+	path = foundations/tools/foundry/NFT-f23/lib/openzeppelin-contracts
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts
+[submodule "foundations/tools/foundry/NFT-f23/lib/foundry-devops"]
+	path = foundations/tools/foundry/NFT-f23/lib/foundry-devops
+	url = https://github.com/ChainAccelOrg/foundry-devops
