--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule "foundations/tools/foundry/defi-stablecoin-f23/lib/forge-std"]
 	path = foundations/tools/foundry/defi-stablecoin-f23/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "foundations/tools/foundry/defi-stablecoin-f23/lib/openzeppelin-contracts"]
+	path = foundations/tools/foundry/defi-stablecoin-f23/lib/openzeppelin-contracts
+	url = https://github.com/openzeppelin/openzeppelin-contracts
