--- a/foundations/tools/foundry/defi-stablecoin-f23/foundry.toml
+++ b/foundations/tools/foundry/defi-stablecoin-f23/foundry.toml
@@ -3,7 +3,10 @@ src = "src"
 out = "out"
 libs = ["lib"]
 
-remappings = ['@openzeppelin=lib/openzeppelin-contracts/']
+remappings = [
+    '@chainlink/contracts/=lib/chainlink-brownie-contracts/contracts/',
+    '@openzeppelin/contracts=lib/openzeppelin-contracts/contracts/',
+]
 
 # github.com/Cyfrin/foundry-devops
 fs_permissions = [
