--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 [submodule "foundations/tools/foundry/defi-stablecoin-f23/lib/chainlink-brownie-contracts"]
 	path = foundations/tools/foundry/defi-stablecoin-f23/lib/chainlink-brownie-contracts
 	url = https://github.com/smartcontractkit/chainlink-brownie-contracts
+[submodule "foundations/tools/foundry/merkle-airdrop/lib/forge-std"]
+	path = foundations/tools/foundry/merkle-airdrop/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
