--- a/foundations/tools/foundry/merkle-airdrop/foundry.toml
+++ b/foundations/tools/foundry/merkle-airdrop/foundry.toml
@@ -3,9 +3,17 @@ src = "src"
 out = "out"
 libs = ["lib"]
 
-
+fs_permissions = [{ access = "read-write", path = "./" }]
 remappings = [
-    '@chainlink/contracts/=lib/chainlink-brownie-contracts/contracts/',
-    '@openzeppelin/contracts=lib/openzeppelin-contracts/contracts/',
+    'murky/=lib/murky/',
+    '@openzeppelin/contracts/=lib/openzeppelin-contracts/contracts/',
+    'foundry-devops/=lib/foundry-devops',
+    'forge-std/=lib/forge-std/src/',
 ]
+
+# # github.com/Cyfrin/foundry-devops
+# fs_permissions = [
+#     { access = "read", path = "./broadcast" },
+#     { access = "read", path = "./reports" },
+# ]
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
