--- a/.gitmodules
+++ b/.gitmodules
@@ -58,3 +58,6 @@
 [submodule "foundations/tools/foundry/merkle-airdrop/lib/foundry-devops"]
 	path = foundations/tools/foundry/merkle-airdrop/lib/foundry-devops
 	url = https://github.com/cyfrin/foundry-devops
+[submodule "foundations/tools/foundry/upgrades-f23/lib/forge-std"]
+	path = foundations/tools/foundry/upgrades-f23/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
