--- a/.gitmodules
+++ b/.gitmodules
@@ -61,3 +61,6 @@
 [submodule "foundations/tools/foundry/upgrades-f23/lib/forge-std"]
 	path = foundations/tools/foundry/upgrades-f23/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "foundations/tools/foundry/upgrades-f23/lib/openzeppelin-contracts-upgradeable"]
+	path = foundations/tools/foundry/upgrades-f23/lib/openzeppelin-contracts-upgradeable
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts-upgradeable
