--- a/.gitmodules
+++ b/.gitmodules
@@ -64,3 +64,6 @@
 [submodule "foundations/tools/foundry/upgrades-f23/lib/openzeppelin-contracts-upgradeable"]
 	path = foundations/tools/foundry/upgrades-f23/lib/openzeppelin-contracts-upgradeable
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts-upgradeable
+[submodule "foundations/tools/foundry/upgrades-f23/lib/openzeppelin-contracts"]
+	path = foundations/tools/foundry/upgrades-f23/lib/openzeppelin-contracts
+	url = https://github.com/Openzeppelin/openzeppelin-contracts
