--- a/foundations/tools/foundry/upgrades-f23/foundry.toml
+++ b/foundations/tools/foundry/upgrades-f23/foundry.toml
@@ -3,5 +3,11 @@ src = "src"
 out = "out"
 libs = ["lib"]
 
-remappings = ["@openzeppelin/contracts-upgradeable=lib/openzeppelin-contracts-upgradeable/contracts"]
+remappings = ['@openzeppelin/contracts=lib/openzeppelin-contracts/contracts', '@openzeppelin/contracts-upgradeable=lib/openzeppelin-contracts-upgradeable/contracts']
+
+# github.com/Cyfrin/foundry-devops
+fs_permissions = [
+    { access = "read", path = "./broadcast" },
+    { access = "read", path = "./reports" },
+]
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
