--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "foundations/tools/foundry/upgrades-f23/lib/foundry-devops"]
 	path = foundations/tools/foundry/upgrades-f23/lib/foundry-devops
 	url = https://github.com/chainaccelorg/foundry-devops
+[submodule "foundations/tools/foundry/minimal-account-abstraction/lib/forge-std"]
+	path = foundations/tools/foundry/minimal-account-abstraction/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
