--- a/.gitmodules
+++ b/.gitmodules
@@ -73,3 +73,6 @@
 [submodule "foundations/tools/foundry/minimal-account-abstraction/lib/forge-std"]
 	path = foundations/tools/foundry/minimal-account-abstraction/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "foundations/tools/foundry/minimal-account-abstraction/lib/account-abstraction"]
+	path = foundations/tools/foundry/minimal-account-abstraction/lib/account-abstraction
+	url = https://github.com/eth-infinitism/account-abstraction
