--- a/.gitmodules
+++ b/.gitmodules
@@ -76,3 +76,6 @@
 [submodule "foundations/tools/foundry/minimal-account-abstraction/lib/account-abstraction"]
 	path = foundations/tools/foundry/minimal-account-abstraction/lib/account-abstraction
 	url = https://github.com/eth-infinitism/account-abstraction
+[submodule "foundations/tools/foundry/minimal-account-abstraction/lib/openzeppelin-contracts"]
+	path = foundations/tools/foundry/minimal-account-abstraction/lib/openzeppelin-contracts
+	url = https://github.com/Openzeppelin/openzeppelin-contracts
