--- a/resources/repo/minimal-account-abstraction/foundry.toml
+++ b/resources/repo/minimal-account-abstraction/foundry.toml
@@ -3,6 +3,7 @@ src = "src"
 out = "out"
 libs = ["lib"]
 remappings = ['@openzeppelin/contracts=lib/openzeppelin-contracts/contracts']
+# set this up then zk sync will allow you call the systems contract
 is-system = true
 via-ir = true
 fs_permissions = [
