--- a/.gitmodules
+++ b/.gitmodules
@@ -85,3 +85,6 @@
 [submodule "foundations/tools/foundry/minimal-account-abstraction/lib/foundry-era-contracts"]
 	path = foundations/tools/foundry/minimal-account-abstraction/lib/foundry-era-contracts
 	url = https://github.com/Cyfrin/foundry-era-contracts
+[submodule "foundations/tools/foundry/DAO-f23/lib/forge-std"]
+	path = foundations/tools/foundry/DAO-f23/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
