forge install: openzeppelin-contracts
v5.2.0

--- a/.gitmodules
+++ b/.gitmodules
@@ -88,3 +88,6 @@
 [submodule "foundations/tools/foundry/DAO-f23/lib/forge-std"]
 	path = foundations/tools/foundry/DAO-f23/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "foundations/tools/foundry/DAO-f23/lib/openzeppelin-contracts"]
+	path = foundations/tools/foundry/DAO-f23/lib/openzeppelin-contracts
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts
