--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,2 +1,76 @@
 {
+    "todohighlight.isEnable": true,
+    "todohighlight.isCaseSensitive": true,
+// todohighlight
+"todohighlight.keywords": [
+    "DEBUG:",
+    "REVIEW:",
+    {
+        // NOTE aaa
+      "text": "NOTE:",
+      "color": "#fff",
+      "backgroundColor": "#67C23A",
+      "overviewRulerColor": "grey"
+    },
+    {
+      "text": "BUG:",
+      "color": "#fff",
+      "backgroundColor": "#F56C6C",
+      "overviewRulerColor": "grey"
+    },
+    {
+      "text": "INFO:",
+      "color": "#fff",
+      "backgroundColor": "#909399",
+      "overviewRulerColor": "grey"
+    },
+    {
+      "text": "HACK:",
+      "color": "#fff",
+      "backgroundColor": "#E040FB",
+      "overviewRulerColor": "grey"
+    },
+    {
+      "text": "REVIEW:",
+      "color": "black",
+      "backgroundColor": "yellow",
+      "overviewRulerColor": "grey"
+    }
+  ],
+
+    // "todohighlight.keywordsPattern": "TODO:|FIXME:|\\(([^)]+)\\)", //highlight `TODO:`,`FIXME:` or content between parentheses
+    // "todohighlight.defaultStyle": {
+    //     "color": "yellow",
+    //     "backgroundColor": "blue",
+    //     "overviewRulerColor": "#ffab00",
+    //     "cursor": "pointer",
+    //     "border": "1px solid #eee",
+    //     "borderRadius": "1px",
+    //     "isWholeLine": false,
+    //     //other styling properties goes here ... 
+    // },
+    "todohighlight.include": [
+        "**/*.js",
+        "**/*.jsx",
+        "**/*.ts",
+        "**/*.tsx",
+        "**/*.html",
+        "**/*.php",
+        "**/*.css",
+        "**/*.scss"
+    ],
+    "todohighlight.exclude": [
+        "**/node_modules/**",
+        "**/bower_components/**",
+        "**/dist/**",
+        "**/build/**",
+        "**/.vscode/**",
+        "**/.github/**",
+        "**/_output/**",
+        "**/*.min.*",
+        "**/*.map",
+        "**/.next/**"
+    ],
+    "todohighlight.maxFilesForSearch": 5120,
+    "todohighlight.toggleURI": false
 }
